--- a/css/main.css
+++ b/css/main.css
@@ -6,17 +6,45 @@
 
 
 
+   #slideshow {
+     position:relative;
+      width: 80%;
+      margin: auto;
+     }
 
+   img {
+     width: auto;
+     max-height: 400px;
+     margin: auto;
+   }
+   button {
+     background-color: none !important;
+     background-image: none !important;
+   }
 
+   .arrowright {
+     text-align: right;
+     position: absolute;
+     right: 0;
+     width:50px;
+     height: 50px;
+     top: 42%;
+     background-image: url("../img/arrowright.png") !important;
+     background-repeat: no-repeat;
+     background-position: center;
+     background-size: contain;
 
+   }
 
+   .arrowleft {
+    position: absolute;
+    left: 0;
+     width:50px;
+     height: 50px;
+     top: 42%;
+     background-image: url("../img/arrowright.png") !important;
+     background-repeat: no-repeat;
+     background-position: center;
+     background-size: contain;
 
-
-
-
-
-
-
-
-
-
+     }
