--- a/css/caroussel.css
+++ b/css/caroussel.css
@@ -17,10 +17,6 @@
      max-height: 400px;
      margin: auto;
    }
-   button {
-     background-color: none !important;
-     background-image: none !important;
-   }
 
   .navBTN {
     opacity: 0.3;
@@ -30,7 +26,7 @@
   }
 
   .playPause {
-    position: absolute;;
+    position: absolute;
     bottom: 10px;
     left: 48%
   }
@@ -42,11 +38,6 @@
      width:50px;
      height: 50px;
      top: 42%;
-     background-image: url("../img/arrowright.png") !important;
-     background-repeat: no-repeat;
-     background-position: center;
-     background-size: contain;
-
    }
 
    .arrowleft {
@@ -55,15 +46,20 @@
      width:50px;
      height: 50px;
      top: 42%;
-     background-image: url("../img/arrowright.png") !important;
-     background-repeat: no-repeat;
-     background-position: center;
-     background-size: contain;
+    }
 
-     }
-
-     @media all and (device-width:768px) {
+     @media all and (max-width :768px) {
        #slideshow {
           width: 100%;
          }
+       .playPause {
+         position: absolute;
+         bottom: 10px;
+         left: 45%;
+       }
+     }
+     @media all and (max-width :450px) {
+       .playPause {
+         left: 42%;
+       }
      }
